--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "private": true,
   "main": "server/index.js",
+  "engines": {
+    "node": "16.16.0"
+  },
   "scripts": {
     "dev": "NODE_ENV=dev nodemon -w server",
     "start": "node server",
