--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "keywords": [],
   "author": "VeryBadFrags",
   "license": "MIT",
-  "dependencies": {
-    "socket.io": "^3.1.1"
-  },
   "devDependencies": {
     "eslint": "^8.13.0",
     "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "express": "^4.18.1",
+    "socket.io": "^4.5.0"
   }
 }
